--- a/index.html
+++ b/index.html
@@ -445,6 +445,19 @@ https://www.iconfinder.com/korawan_m
           <!-- end of card-->
         </div>
         <!--end of single store item-->
+         <!-- modal-container -->
+         
+  <div class="container-fluid ">
+    <div class="row lightbox-container align-items-center">
+      <div class="col-10 col-md-10 mx-auto text-right lightbox-holder">
+        <span class="lightbox-close"><i class="fas fa-window-close"></i></span>
+        <div class="lightbox-item"></div>
+        <span class="lightbox-control btnLeft"><i class="fas fa-caret-left"></i></span>
+        <span class="lightbox-control btnRight"><i class="fas fa-caret-right"></i></span>
+      </div>
+
+    </div>
+  </div>
 
       </div>
   </section>
