added new featers
added CHUCK NORRIS API
created CHUCK NORRIS page
added sorting filtering
added about page and added basic css and responsive about-page

--Task completed

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <!-- font awesome -->
   <link rel="stylesheet" href="css/all.css">
-  <title>FIlter Project</title>
+  <title>Home Page Nikola</title>
   <style>
   </style>
 </head>
@@ -34,13 +34,13 @@ https://www.iconfinder.com/korawan_m
       <div class="collapse navbar-collapse" id="myNav">
         <ul class="navbar-nav mx-auto text-capitalize">
           <li class="nav-item active">
-            <a class="nav-link" href="#">home</a>
+            <a class="nav-link" href="index.html">home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link " href="#">about</a>
+            <a class="nav-link " href="aboutUs.html">about</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">store</a>
+            <a class="nav-link" href="chuck-norris.html">CHUCK NORRIS API</a>
           </li>
         </ul>
         <div class="nav-info-items d-none d-lg-flex ">
@@ -61,86 +61,11 @@ https://www.iconfinder.com/korawan_m
     </nav>
     <!-- end of nav -->
     <!-- banner  -->
-    <div class="container-fluid">
-      <div class="row max-height justify-content-center align-items-center">
-        <div class="col-10 mx-auto banner text-center">
-          <h1 class="text-capitalize">welcome to <strong class="banner-title ">grandma's</strong></h1>
-          <a href="#store" class="btn banner-link text-uppercase my-2">explore</a>
-
-        </div>
-        <div id="cart" class="cart">
-          <!-- cart item -->
-          <div class="cart-item d-flex justify-content-between text-capitalize my-3">
-            <img src="img/z-cake-2.jpeg" class="img-fluid rounded-circle" id="item-img" alt="">
-            <div class="item-text">
-
-              <p id="cart-item-title" class="font-weight-bold mb-0">cart item</p>
-              <p id="cart-item-price" class="mb-0">10.99</p>
-            </div>
-            <a href="#" id='cart-item-remove' class="cart-item-remove">
-              <i class="fas fa-trash"></i>
-            </a>
-          </div>
-          <!--end of  cart item -->
-          <!-- cart item -->
-          <div class="cart-item d-flex justify-content-between text-capitalize my-3">
-            <img src="img/z-sweets-3.jpeg" class="img-fluid rounded-circle" id="item-img" alt="">
-            <div class="cart-item-text">
-
-              <p id="cart-item-title" class="font-weight-bold mb-0">cart item</p>
-              <p id="cart-item-price" class="mb-0">10.99</p>
-            </div>
-            <a href="#" id='cart-item-remove' class="cart-item-remove">
-              <i class="fas fa-trash"></i>
-            </a>
-          </div>
-          <!--end of  cart item -->
-          <!-- cart total -->
-          <div class="cart-total-container d-flex justify-content-around text-capitalize mt-5">
-            <h5>total</h5>
-            <h5> $ <strong id="cart-total" class="font-weight-bold">10.00</strong> </h5>
-          </div>
-          <!--end cart total -->
-          <!-- cart buttons -->
-          <div class="cart-buttons-container mt-3 d-flex justify-content-between">
-            <a href="#" id="clear-cart" class="btn btn-outline-secondary btn-black text-uppercase">clear cart</a>
-            <a href="#" class="btn btn-outline-secondary text-uppercase btn-pink">checkout</a>
-          </div>
-          <!--end of  cart buttons -->
-          <!--  -->
-        </div>
-      </div>
-    </div>
+   
 
 
 
-
-    <!--end of  banner  -->
-  </header>
-  <!-- header -->
-  <!-- about us -->
-  <section class="about py-5" id="about">
-    <div class="container">
-
-      <div class="row">
-        <div class="col-10 mx-auto col-md-6 my-5">
-          <h1 class="text-capitalize">about <strong class="banner-title ">us</strong></h1>
-          <p class="my-4 text-muted w-75">Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit, aliquam voluptas
-            beatae vitae expedita consectetur nesciunt quia deserunt asperiores facere fuga dicta fugiat corrupti et omnis
-            porro at dolorum! Ad!</p>
-          <a href="#" class="btn btn-outline-secondary btn-black text-uppercase ">explore</a>
-
-        </div>
-        <div class="col-10 mx-auto col-md-6 align-self-center my-5">
-          <div class="about-img__container">
-            <img src="img/sweets-1.jpeg" class="img-fluid" alt="">
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- end of about us -->
+  
 
 
   <!-- store -->
@@ -471,6 +396,7 @@ https://www.iconfinder.com/korawan_m
   <script src="js/bootstrap.bundle.min.js"></script>
   <!-- script js -->
   <script src="js/script.js"></script>
+  
 </body>
 
 </html>
